# ThunderScope

./: .gitignore  .gitmodules  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  index.html
DSO_Hardware/: DSO.bak  (+1 more)
Software/libthunderscope/: CMakeLists.txt
Software/libthunderscope/examples/thunderscopehwbench/: CMakeLists.txt
Software/libthunderscope/examples/thunderscopehwcalibrate/: CMakeLists.txt
Software/libthunderscope/examples/thunderscopehwcompensate/: CMakeLists.txt  thunderscopehwcompensate.c
Software/libthunderscope/examples/thunderscopehwdump/: CMakeLists.txt
Software/libthunderscope/examples/thunderscopehwstresstest/: CMakeLists.txt  thunderscopehwstresstest.c
Software/libthunderscope/test/: CMakeLists.txt  thunderscopehwtest.c
Software/libthunderscope/thunderscopehw/: CMakeLists.txt  thunderscopehw.c  thunderscopehw_linux.c  thunderscopehw_simulator.c  thunderscopehw_win.c
Software/libthunderscopehw/: CMakeLists.txt
Software/libthunderscopehw/examples/thunderscopehwbench/: thunderscopehwbench.c
Software/libthunderscopehw/examples/thunderscopehwcalibrate/: thunderscopehwcalibrate.c
Software/libthunderscopehw/examples/thunderscopehwcompensate/: thunderscopehwcompensate.c
Software/libthunderscopehw/examples/thunderscopehwdump/: thunderscopehwdump.c
Software/libthunderscopehw/include/: thunderscopehw.h
Software/libthunderscopehw/test/: thunderscopehwtest.c
Software/waveview/: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  README.md  README_protocol.md  ZERO_CHECK.vcxproj  deps.bat  package-lock.json  package.json  scope.sln  scope.vcxproj  test.js
Software/waveview/cppsrc/: test.txt
Software/waveview/electron/: electron.ts  preload.ts
Software/waveview/public/: index.html
Software/waveview/scope_link/: .gitignore  Makefile  README.md  test.js  test1.csv  test3.csv  test4.csv  test5.csv
Software/waveview/scope_link/benchmark/: .gitignore  README.md  benchmarkTrigger.cpp
Software/waveview/scope_link/include/: EVDataTransferThread.hpp  EVLibrary.hpp  EVMath.hpp  EVSuperSpeedFIFOBridge.hpp  EVTester.hpp  NapiHook.hpp  PCIe.hpp  bridge.hpp  common.hpp  controller.hpp  dataTransferHandler.hpp  digitalProcessor.hpp  dspPipeline.hpp  exception.hpp  ftdiThings.hpp  logger.hpp  packetProcessor.hpp  postProcessor.hpp  processor.hpp  transferSpoof.hpp  trigger.hpp  xdma_public.h
Software/waveview/scope_link/lib/FTD3XXLibrary_v1.3.0.4/x64/: FTD3XX.lib
Software/waveview/scope_link/src/: EVDigitalProcessing.cpp  EVDigitalProcessing.hpp  EVLibrary.cpp  EVLibrary.hpp  EVMath.cpp  EVSuperSpeedFIFOBridge.cpp  EVTester.cpp  EVTester.hpp  NapiHook.cpp  NapiHook.hpp  PCIe.cpp  bridge.cpp  common.cpp  controller.cpp  dataTransferHandler.cpp  digitalProcessor.cpp  dspPipeline.cpp  exception.cpp  ftdiThings.cpp  logger.cpp  logger.hpp  main.cpp  packetProcessor.cpp  postProcessor.cpp  processor.cpp  test.cpp  transferSpoof.cpp  trigger.cpp
Software/waveview/scope_link/test/: test1.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7-2ch.csv  test7-4ch.csv  test8.csv  test9-max.csv  test9-min.csv
Software/waveview/src/: App.css  App.tsx  index.tsx  worker.ts
Software/waveview/src/components/bottombar/: bottombar.css  bottombar.tsx
Software/waveview/src/components/bottombar/subcomponents/: channel.css  channel.tsx  timeperdivision.css  timeperdivision.tsx  trigger.css  trigger.tsx
Software/waveview/src/components/graph/: graph.css  graph.tsx
Software/waveview/src/components/sidebar/: largebutton.css  largebutton.tsx  reduxChannelTest.tsx  reduxCounterTest.tsx  reduxTest.tsx  search.css  search.tsx  sidebar.css  sidebar.tsx  singleButton.css  singleButton.tsx  stopButton.css
Software/waveview/src/components/sidebar/core/: runStopButton.tsx  search.tsx  singleButton.tsx  stopButton.tsx
Software/waveview/src/components/sidebar/interfaces/: sidebarInterfaces.ts
Software/waveview/src/components/sidebar/widgets/: horizontalWidget.css  horizontalWidget.tsx  mathWidget.tsx  measurementsWidget.tsx  triggerWidget.tsx  verticalWidget.tsx  widget.css  widget.tsx
Software/waveview/src/components/widget/: widget.css  widget.tsx
Software/waveview/src/configuration/: defaultValues.tsx
Software/waveview/src/configuration/enums/: cmd.tsx  controlMode.tsx  defaultChannelColor.tsx  defaultColors.tsx  graphStatus.tsx  mathOperators.tsx  mathType.tsx  measurementType.tsx  probeMode.tsx  setChMode.tsx  timeBaseMode.tsx  timeUnit.tsx  triggerType.tsx  voltageUnit.tsx
Software/waveview/src/css/bottombar/: bottombar.css
Software/waveview/src/css/bottombar/subcomponents/: timeperdivision.css  trigger.css
Software/waveview/src/css/bottombar/subscomponents/: channel.css  trigger.css
Software/waveview/src/css/graph/: graph.css
Software/waveview/src/css/sidebar/: sidebar.css
Software/waveview/src/css/sidebar/core/: runStopButton.css  search.css  singleButton.css  stopButton.css
Software/waveview/src/css/sidebar/widgets/: horizontalWidget.css  mathWidget.css  measurementsWidget.css  triggerWidget.css  verticalWidget.css
Software/waveview/src/enums/sidebar/widgets/: blockType.ts
Software/waveview/src/interfaces/sidebar/: sidebarInterfaces.ts
Software/waveview/src/interfaces/sidebar/widgets/: blockInterfaces.ts  sidebarInterfaces.ts
Software/waveview/src/redux/: actionTypes.tsx  actions.tsx  store.tsx
Software/waveview/src/redux/initialStates/: graphInitialState.tsx  horizontalWidgetInitialState.tsx  mathWidgetInitialState.tsx  measurementsWidgetInitialState.tsx  settingsInitialState.tsx  triggerWidgetInitialState.tsx  verticalWidgetInitialState.tsx
Software/waveview/src/redux/reducers/: channelReducer.tsx  counter.tsx  counterReducer.tsx  graphReducer.tsx  horizontalWidgetReducer.tsx  index.tsx  measurementsWidgetReducer.tsx  settingsReducer.tsx  triggerWidgetReducer.tsx  verticalWidgetReducer.tsx
Software/waveview/src/testdata/: sin10kHz_ratio12.ts  sin1MHz.ts  sin1MHz_mod1000.ts  sin1MHz_mod300.ts  sinc1MHz.ts
Software/waveview/src/util/: convert.ts  plumber.ts  setChHelper.ts  testconf.ts  testpoints.ts
(+5012 files in other folders)
